# aoc-2023

./: .gitignore  CMakeLists.txt
1/: 1.c  1.py  2.c
benchmarks/: tag_vs_raw_ptr.c
shared/: conversion.h  file_io.h  logging.h  memory.h  misc.h  tagged_ptr.h  typechecked_struct.h
tests/: tagged_ptr_tests.c
